--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "cloudinary": "^1.41.3",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "prisma": "^6.13.0"
