feat(backend): add seed script to package.json to seed db on render

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "build": "echo 'No build needed'"
+    "build": "echo 'No build needed'",
+    "seed": "node prisma/seed.js"
   },
   "keywords": [],
   "author": "",
